# 42-SH

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  meson.build
src/: main.c  meson.build
src/ast_info/: ast_info.c
src/ast_info/headers/: ast_info.h
src/builtins/: break-continue.c  break_continue.c  builtins_dispatch.c  cd.c  cd2.c  cd_vector.c  cd_vector.h  dot.c  echo.c  exit.c  export.c  meson.build  pwd.c  unset.c
src/builtins/headers/: builtins.h  cd.c
src/data_types/: meson.build  token_vec.c  xstring.c
src/data_types/headers/: token_vec.h  xstring.h
src/eval_ast/: eval_ast.c  meson.build
src/eval_ast/headers/: eval_ast.h
src/evalexpr/: adapt.c  eval.c  evalexpr.c  launch.c  rpn.c
src/evalexpr/headers/: evalexpr.h
src/execution/: case.c  command_sub.c  execution.c  funcx.c  meson.build  pipe.c  redir.c  subshell.c  xexecution.c
src/execution/headers/: execution.h
src/func/: func.c
src/func/headers/: func.h
src/handle_ast/: handle_ast.c
src/handle_ast/headers/: handle_ast.h
src/io/: meson.build  xstrdup.c
src/io/headers/: xstrdup.h
src/lexer/: lexer.c  lexer_command.c  lexer_command_sub.c  lexer_context.c  lexer_dquote.c  lexer_for.c  lexer_fun.c  lexer_keywords.c  lexer_operations.c  lexer_redir.c  lexer_squote.c  lexer_start.c  lexer_var.c  meson.build  recognize_words.c
src/lexer/headers/: lexer.h  tokens.h
src/parser/: ast_pretty_print.c  builds.c  builds2.c  exec_script.c  meson.build  parse_case.c  parser.c  parser_cmds.c  parser_shell_cmds.c  sh_grammar.txt  tools_parse.c  vector_tokens.c  xvector_tokens.c
src/parser/headers/: parser.h  vector_tokens.h  xparser.h
src/program_start/: launch_program.c  meson.build  options.c  read_script.c  special_vars.c
src/program_start/headers/: launch_program.h  options.h  read_script.h  special_vars.h
src/vars/: context.c  expand_vars.c  vars.c  xvars.c  xvars2.c
src/vars/headers/: vars.h
src/xalloc/: meson.build  xalloc.c
src/xalloc/headers/: ast_xalloc.h  xalloc.h
src/xmalloc/: xmalloc.c
src/xmalloc/headers/: xmalloc.h
tests/: test_ci.sh
tests/integration_test/: init_env.sh  requierments.txt  test.sh  test_var_positional_at_star.sh  testarg.txt  testsuite.py
tests/integration_test/yaml_tests/: Sample.yaml  arguments.yaml  break_continue.yaml  case.yaml  cd.yaml  cmd_sub.yaml  dot.yaml  echo.yaml  evalexpr.yaml  execution.yaml  export.yaml  func.yaml  lexer.yaml  pipe.yaml  real.yaml  redir.yaml  subshell.yaml  test.json  test.yaml  test_parser.yaml  unset.yaml  var.yaml  variable.yaml
tests/integration_test/yaml_tests/sample_script/: .hidden  80cols.sh  alphanum.sh  ascii_house.sh  authors.sh  create_files.sh  digit.sh  fact_iter.sh  fc.sh  file.sh  generate_files.sh  glob_remove_shell.sh  hcf.sh  hello.sh  inside.sh  inside_noif.sh  long_args.sh  mix_files.sh  most_used.sh  my_file.sh  print_3.sh  print_n.sh  sort_files.sh
tests/unit_tests/: dot_test.c  export_test.c  lexer_test.c
tests/unit_tests/echo_tests/: echo_main.c  echo_tests.c
